--- a/FrutaBuildingAFeatureRichAppWithSwiftUI/iOS/iOS Clip.entitlements
+++ b/FrutaBuildingAFeatureRichAppWithSwiftUI/iOS/iOS Clip.entitlements
@@ -12,7 +12,7 @@
 	</array>
 	<key>com.apple.developer.parent-application-identifiers</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.example.apple-samplecode.fruta</string>
+		<string>com.example.apple-samplecode.fruta9P37CPGJW5</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
